Final submission commit.

--- a/CitibikeQuestions.ipynb
+++ b/CitibikeQuestions.ipynb
@@ -169,13 +169,13 @@
      "output_type": "stream",
      "text": [
       "What is the median trip duration, in seconds?\n",
-      "518\n"
+      "518.0000000000\n"
      ]
     }
    ],
    "source": [
-    "question = \"What is the median trip duration, in seconds?\\n\"\n",
-    "print(question + str(int(df['tripduration'].median())))"
+    "question = \"What is the median trip duration, in seconds?\\n{:5.10f}\"\n",
+    "print(question.format(int(df['tripduration'].median())))"
    ]
   },
   {
@@ -197,16 +197,16 @@
      "output_type": "stream",
      "text": [
       "What fraction of rides start and end at the same station?\n",
-      "0.0158508712763\n"
+      "0.0158508713\n"
      ]
     }
    ],
    "source": [
     "question = (\"What fraction of rides start and end \"\n",
-    "            \"at the same station?\\n\")\n",
+    "            \"at the same station?\\n{:5.10f}\")\n",
     "same = df[df['start station id']\n",
     "          == df['end station id']].shape[0]\n",
-    "print(question + str(same / df.shape[0]))"
+    "print(question.format(same / df.shape[0]))"
    ]
   },
   {
@@ -228,7 +228,7 @@
      "output_type": "stream",
      "text": [
       "We say a bike has visited a station if it has a ride that either started or ended at that station. Some bikes have visited many stations; others just a few. What is the standard deviation of the number of stations visited by a bike?\n",
-      "38.932999088\n"
+      "38.9329990880\n"
      ]
     }
    ],
@@ -237,14 +237,14 @@
     "            \"a ride that either started or ended at that \"\n",
     "            \"station. Some bikes have visited many stations; \"\n",
     "            \"others just a few. What is the standard deviation \"\n",
-    "            \"of the number of stations visited by a bike?\\n\")\n",
+    "            \"of the number of stations visited by a bike?\\n{:5.10f}\")\n",
     "def stations_visited(grp_df):\n",
     "    started = set(grp_df['start station id'].dropna().unique())\n",
     "    ended = set(grp_df['end station id'].dropna().unique())\n",
     "    return len(started | ended)\n",
     "group = df.groupby('bikeid')\n",
     "bike_stations_visited = group.apply(stations_visited)\n",
-    "print(question + str(bike_stations_visited.std()))"
+    "print(question.format(bike_stations_visited.std()))"
    ]
   },
   {
@@ -266,7 +266,7 @@
      "output_type": "stream",
      "text": [
       "What is the average length, in kilometers, of a trip? Assume trips follow great circle arcs from the start station to the end station. Ignore trips that start and end at the same station, as well as those with obviously wrong data.\n",
-      "1.51774454976\n"
+      "1.5177445498\n"
      ]
     }
    ],
@@ -275,7 +275,7 @@
     "            \"trip? Assume trips follow great circle arcs from \"\n",
     "            \"the start station to the end station. Ignore \"\n",
     "            \"trips that start and end at the same station, as \"\n",
-    "            \"well as those with obviously wrong data.\\n\")\n",
+    "            \"well as those with obviously wrong data.\\n{:5.10f}\")\n",
     "\n",
     "def great_circle_dist(lat1, lon1, lat2, lon2):\n",
     "    radius = 6371 #earth's radius in km\n",
@@ -299,7 +299,7 @@
     "    return dists.mean()\n",
     "    \n",
     "\n",
-    "print(question + str(mean_dist(df)))\n",
+    "print(question.format(mean_dist(df)))\n",
     "    \n",
     "    "
    ]
@@ -332,12 +332,12 @@
     "            \"each month in the year. (Consider a trip to \"\n",
     "            \"occur in the month in which it starts.) What \"\n",
     "            \"is the difference, in seconds, between the \"\n",
-    "            \"longest and shortest average durations?\\n\")\n",
+    "            \"longest and shortest average durations?\\n{:5.10f}\")\n",
     "\n",
     "group = df.groupby(df['starttime'].dt.month)\n",
     "means = group['tripduration'].mean()\n",
     "diff = means.max() - means.min()\n",
-    "print(question + str(diff))"
+    "print(question.format(diff))"
    ]
   },
   {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -359,7 +359,7 @@
      "output_type": "stream",
      "text": [
       "Let us define the hourly usage fraction of a station to be the fraction of all rides starting at that station that leave during a specific hour. A station has surprising usage patterns if it has an hourly usage fraction for an hour significantly different from the corresponding hourly usage fraction of the system as a whole. What is the largest ratio of station hourly usage fraction to system hourly usage fraction (hence corresponding to the most \"surprising\" station-hour pair)?\n",
-      "2.11250603573e-05\n"
+      "0.0000211251\n"
      ]
     }
    ],
@@ -374,7 +374,7 @@
     "            'system as a whole. What is the largest ratio of '\n",
     "            'station hourly usage fraction to system hourly '\n",
     "            'usage fraction (hence corresponding to the most '\n",
-    "            '\"surprising\" station-hour pair)?\\n')\n",
+    "            '\"surprising\" station-hour pair)?\\n{:5.10f}')\n",
     "\n",
     "hour = df['starttime'].dt.hour\n",
     "\n",
@@ -393,7 +393,7 @@
     "top_group = station_hourly.groupby(level=['start station id'])\n",
     "station_system = top_group.apply(divide_total)\n",
     "\n",
-    "print(question + str(station_system.max()))"
+    "print(question.format(station_system.max()))"
    ]
   },
   {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -415,7 +415,7 @@
      "output_type": "stream",
      "text": [
       "There are two types of riders: \"Customers\" and \"Subscribers.\" Customers buy a short-time pass which allows 30-minute rides. Subscribers buy yearly passes that allow 45-minute rides. What fraction of rides exceed their corresponding time limit?\n",
-      "0.0103153190312\n"
+      "0.0103153190\n"
      ]
     }
    ],
@@ -425,13 +425,13 @@
     "            'which allows 30-minute rides. Subscribers buy '\n",
     "            'yearly passes that allow 45-minute rides. What '\n",
     "            'fraction of rides exceed their corresponding '\n",
-    "            'time limit?\\n')\n",
+    "            'time limit?\\n{:5.10f}')\n",
     "subscribers_over = ((df['usertype'] == 'Subscriber')\n",
     "                    & (df['tripduration'] > 45 * 60))\n",
     "customers_over = ((df['usertype'] == 'Customer')\n",
     "                    & (df['tripduration'] > 30 * 60))\n",
     "exceeded_frac = (customers_over | subscribers_over).mean()\n",
-    "print(question + str(exceeded_frac))"
+    "print(question.format(exceeded_frac))"
    ]
   },
   {
@@ -443,20 +443,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "19.757123002084782"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most of the time, a bike will begin a trip at the same station where its previous trip ended. Sometimes a bike will be moved by the program, either for maintenance or to rebalance the distribution of bikes. What is the average number of times a bike is moved during this period, as detected by seeing if it starts at a different station than where the previous ride ended?\n",
+      "19.7571230021\n"
+     ]
     }
    ],
    "source": [
@@ -468,7 +466,7 @@
     "            \"number of times a bike is moved during this \"\n",
     "            \"period, as detected by seeing if it starts at a \"\n",
     "            \"different station than where the previous ride \"\n",
-    "            \"ended?\\n\")\n",
+    "            \"ended?\\n{:5.10f}\")\n",
     "group = df.groupby('bikeid')\n",
     "def times_moved(df):\n",
     "    end_stations = df['end station id'].values\n",
@@ -476,7 +474,7 @@
     "    start_stations = df['start station id'].values\n",
     "    return (rolled_stations[1:] != start_stations[1:]).sum()\n",
     "mean_moved = group.apply(times_moved).mean()\n",
-    "print(question + str(mean_moved))\n",
+    "print(question.format(mean_moved))\n",
     "    "
    ]
   },
